--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,12 @@
 <ion-header>
   <ion-toolbar>
   	<ion-buttons slot="start">
-  		<ion-back-button></ion-back-button>
   		<ion-menu-button></ion-menu-button>
   	</ion-buttons>
-    <ion-title>navegacao2</ion-title>
+    <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-	<ion-button (click)="showPageNavegacao1()"> Navegar Para Página 1 </ion-button>
+
 </ion-content>
