--- a/src/app/pages/navegacao/navegacao.page.html
+++ b/src/app/pages/navegacao/navegacao.page.html
@@ -2,6 +2,7 @@
   <ion-toolbar color="primary">
   	<ion-buttons slot="start">
   		<ion-back-button></ion-back-button>
+  		<ion-menu-button></ion-menu-button>
   	</ion-buttons>
     <ion-title>Pagina 1</ion-title>
   </ion-toolbar>
